--- a/index.html
+++ b/index.html
@@ -202,15 +202,13 @@
           <h1 class="font-extrabold text-4xl">Our New Products</h1>
           <p class="font-medium text-sm">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. <br> Purus urna in sit nullam proin. </p>
         </div>
-
         <!-- card section -->
-     
         <div class="grid lg:grid-cols-2 sm:grid-cols-1 gap-6 sm:mx-[150px] lg:mt-10">
           <!-- card 1 -->
           <div class="border-solid border-2 border-gray-200 rounded-2xl lg:w-[573px] lg:h-[218px] sm:w-[335px] sm:h-[453px]">
             <div class="lg:flex gap-5 items-center lg:py-5 lg:px-5 px-16
-            py-6 ">
-              <img src="Images/5.png" alt="">
+            py-2 ">
+              <img src="Images/5.png" alt=""class="mb-4">
               <div class="space-y-3">
                 <div class="flex  gap-7">
                   <div class="flex gap-2">
@@ -282,8 +280,8 @@
          <!-- card 2 -->
           <div class="border-solid border-2 border-gray-200 rounded-2xl lg:w-[573px] lg:h-[218px] sm:w-[335px] sm:h-[453px]">
             <div class="lg:flex gap-5 items-center lg:py-5 lg:px-5 px-16
-            py-6 ">
-              <img src="Images/6.png" alt="">
+            py-2 ">
+              <img src="Images/6.png" alt="" class="mb-4">
               <div class="space-y-3">
                 <div class="flex gap-7">
                   <div class="flex gap-2">
@@ -356,7 +354,7 @@
           <div class="border-solid border-2 border-gray-200 rounded-2xl lg:w-[573px] lg:h-[218px] sm:w-[335px] sm:h-[453px]">
             <div class="lg:flex gap-5 items-center lg:py-5 lg:px-5 px-16
             py-6 ">
-              <img src="Images/7.png" alt="">
+              <img src="Images/7.png" alt="" class="mb-4">
               <div class="space-y-3">
                 <div class="flex gap-7">
                   <div class="flex gap-2">
@@ -429,7 +427,7 @@
           <div class="border-solid border-2 border-gray-200 rounded-2xl lg:w-[573px] lg:h-[218px] sm:w-[335px] sm:h-[453px]">
             <div class="lg:flex gap-5 items-center lg:py-5 lg:px-5 px-16
             py-6 ">
-              <img src="Images/8.png" alt="">
+              <img src="Images/8.png" alt="" class="mb-4">
               <div class="space-y-3">
                 <div class="flex gap-7">
                   <div class="flex gap-2">
@@ -502,7 +500,7 @@
           <div class="border-solid border-2 border-gray-200 rounded-2xl lg:w-[573px] lg:h-[218px] sm:w-[335px] sm:h-[453px]">
             <div class="lg:flex gap-5 items-center lg:py-5 lg:px-5 px-16
             py-6 ">
-              <img src="Images/9.png" alt="">
+              <img src="Images/9.png" alt="" class="mb-4">
               <div class="space-y-3">
                 <div class="flex gap-7">
                   <div class="flex gap-2">
@@ -575,7 +573,7 @@
           <div class="border-solid border-2 border-gray-200 rounded-2xl lg:w-[573px] lg:h-[218px] sm:w-[335px] sm:h-[453px]">
             <div class="lg:flex gap-5 items-center lg:py-5 lg:px-5 px-16
             py-6 ">
-              <img src="Images/10.png" alt="">
+              <img src="Images/10.png" alt="" class="mb-4">
               <div class="space-y-3">
                 <div class="flex gap-7">
                   <div class="flex gap-2">
@@ -646,7 +644,74 @@
           </div>
 
         </div>
- 
+       </section>
+          <!-- Clients Question section -->
+       <section>
+        <div class="mt-10 text-center space-y-6">
+          <h1 class="font-extrabold text-4xl">Clients Question</h1>
+          <p class="font-medium text-base">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+        </div>
+
+        <div class="lg:flex flex-row gap-20 border-solid border-2 border-gray-200 rounded-2xl items-center py-8 px-8 lg:w-[1170px] lg:h-[534px] lg:mx-[135px] lg:my-[48px] mx-6 my-6">
+          <div class="lg:w-[441px] lg:h-[470px]">
+            <img src="Images/11.png" alt="" class="mb-6">
+          </div>
+          <div class="lg:w-[441px] lg:h-[470px] space-y-1">
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" checked="checked" /> 
+              <div class="collapse-title text-base font-bold">
+                Our Equipment
+              </div>
+              <div class="collapse-content"> 
+                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim <br>sagittis turpis in magna.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" /> 
+              <div class="collapse-title text-base font-bold">
+                Hockey Training
+              </div>
+              <div class="collapse-content"> 
+                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim <br>sagittis turpis in magna.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" /> 
+              <div class="collapse-title text-base font-bold">
+                Private Lessons
+              </div>
+              <div class="collapse-content"> 
+                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim <br>sagittis turpis in magna.</p>
+              </div>
+            </div><div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" checked="checked" /> 
+              <div class="collapse-title text-base font-bold">
+                Ski Touring
+              </div>
+              <div class="collapse-content"> 
+                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim <br>sagittis turpis in magna.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" /> 
+              <div class="collapse-title text-base font-bold">
+                Booking
+              </div>
+              <div class="collapse-content"> 
+                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim <br>sagittis turpis in magna.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" /> 
+              <div class="collapse-title text-base font-bold">
+                Pricings
+              </div>
+              <div class="collapse-content"> 
+                <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim <br>sagittis turpis in magna.</p>
+              </div>
+            </div>
+          </div>
+        </div>
        </section>
     </main>
     
