Meet all the heroes from the field

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }
     </style>
 </head>
-<body class="font-manrope">
+<body class="font-manrope m-auto p-0">
     <!-- header section starts -->
     <header class="container mx-auto w-full">
         <!-- navbar section starts -->
@@ -119,12 +119,12 @@
           </div>
         </div>
         <!-- banner section ends -->
-        <!-- <div
-        class="lg:max-w-[600px] p-4 mr-4 lg:p-10 bg-black rounded-2xl absolute translate-y-[190px] lg:translate-y-[350px] lg:ml-[520px] border">
+        <div
+        class="lg:max-w-[600px] p-4 mr-4 lg:p-10 bg-black rounded-2xl absolute translate-y-[290px] lg:translate-y-[350px] lg:ml-[520px]">
         <h1 class="text-xl lg:text-2xl font-extrabold text-white mb-4">Meet all the heroes from the field</h1>
         <p class="text-[14px] lg:text-base font-medium text-white leading-6">Dit amet consectetur. Condimentum
             dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
-    </div> -->
+    </div>
       </div>
       <!-- Professional section starts -->
        <div class="container space-y-20 text-center">
@@ -1129,11 +1129,11 @@
           </div>
           <div class="space-y-3">
             <h3 class="font-bold text-base">Message</h3>
-          <textarea placeholder="Write your message" class="textarea textarea-bordered lg:w-[672px] lg:h-[370px] bg-[#13131808]" ></textarea>
+          <textarea placeholder="Write your message" class="textarea textarea-bordered lg:w-[672px] lg:h-[370px] w-[335px] h-[200px] bg-[#13131808]" ></textarea>
           </div>
           <br>
           <div class="grid grid-cols-2">
-            <button class="btn bg-[#FF4240] text-[#fff] lg:w-[672px]">Send Message</button>
+            <button class="btn bg-[#FF4240] text-[#fff] lg:w-[672px] w-[335px] ">Send Message</button>
           </div>
         </div>
         
@@ -1164,7 +1164,7 @@
     </main>
     <!-- main section ends -->
     <!-- footer section starts -->
-    <footer class="font-manrope footer p-10 bg-black text-neutral-content lg:w-[1440px] lg:h-[454px] items-center ">
+    <footer class="font-manrope footer p-10 bg-black text-white lg:w-auto lg:h-[454px] items-center ">
       <nav>
         <header class="footer-title text-3xl text-white font-extrabold">Get In Touch</header> 
         <a class="link link-hover">Dit amet consectetur. Condimentum <br>
