--- a/index.html
+++ b/index.html
@@ -90,29 +90,28 @@
       <!-- banner section starts -->
       <div class="carousel lg:h-[550px] lg:w-[1170px] lg:mx-[180px] ">
         <div id="slide1" class="carousel-item relative w-full">
-          <img src="/Images/1.png" class="w-full" />
+          <img src="Images/1.png" alt="" class="w-full">
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide4" class="btn btn-circle">❮</a> 
             <a href="#slide2" class="btn btn-circle">❯</a>
           </div>
         </div> 
         <div id="slide2" class="carousel-item relative w-full">
-          <img src="/Images/2.png" class="w-full" />
+          <img src="Images/2.png" alt="" class="w-full">
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide1" class="btn btn-circle">❮</a> 
             <a href="#slide3" class="btn btn-circle">❯</a>
           </div>
         </div> 
         <div id="slide3" class="carousel-item relative w-full">
-          <img src="/Images/3.png
-          " class="w-full" />
+          <img src="Images/3.png" alt="" class="w-full">
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide2" class="btn btn-circle">❮</a> 
             <a href="#slide4" class="btn btn-circle">❯</a>
           </div>
         </div> 
         <div id="slide4" class="carousel-item relative w-full">
-          <img src="/Images/4.png" class="w-full" />
+          <img src="Images/4.png" alt="" class="w-full">
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
             <a href="#slide3" class="btn btn-circle">❮</a> 
             <a href="#slide1" class="btn btn-circle">❯</a>
